test is a bit broken
